# AI-University

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: contracts.py  master_agent.py  polity_agent.py
app/api/: dependencies.py  router.py
app/api/routes/: chat.py  health.py  learning.py  mcqs.py  revisions.py  sessions.py
app/application/: chat_service.py  learning_service.py  quiz_service.py  revision_service.py  session_service.py
app/core/: config.py  errors.py  logging.py
app/domain/: __init__.py  documents.py  learning.py  mcqs.py  revision_policy.py  sessions.py
app/infrastructure/vector/: qdrant_client.py
app/memory/: __init__.py  contracts.py  in_memory.py  redis_session.py
app/rag/: chunking.py  embeddings.py  extraction.py  ingestion.py  retrieval.py
docs/: ARCHITECTURE.md  FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  LOW_LEVEL_DESIGN.md  PROJECT_GUARDRAILS.md
scripts/: ingest_docs.py  seed_materials.py
tests/: test_chat_api.py  test_dashboard_api.py  test_health.py  test_ingestion.py  test_learning_domain.py  test_master_agent.py  test_mcq_api.py  test_memory_service.py  test_observability.py  test_polity_agent.py  test_quiz_service.py  test_retrieval.py  test_revision_service.py  test_session_api.py  test_session_service.py
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/api/: chat.ts  learning.ts  quiz.ts
web/src/hooks/: Toast.module.css  ToastContext.tsx  ToastContextDefinition.ts  useToast.ts
(+23 files in other folders)
