[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-university"
version = "0.1.0"
description = "Personalized AI-powered UPSC coaching backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "pypdf>=5.1.0,<6.0.0",
    "openai>=1.50.0,<2.0.0",
    "qdrant-client>=1.12.0,<2.0.0",
    "langgraph>=0.2.0,<0.3.0",
    "langchain-openai>=0.2.0,<0.3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
